# plaid-ops

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  environment.yml  environment_win_macos.yml  pyproject.toml  pyrightconfig.json  ruff.toml
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: checksum_release.yml  doc.yml  lint-format-check.yaml  pr-title-checker.yml  publish-pypi.yml  testing.yml
.pre_commit_hooks/: check_patterns.py  patterns.txt
docs/: Makefile  conf.py  index.rst
docs/source/: contributing.md  getting_started.md  notebooks.rst  quickstart.md
docs/source/notebooks/: feature_engineering.ipynb  transformations.ipynb
examples/: run_examples.bat  run_examples.sh  test.py
examples/mesh/: feature_engineering_example.py  transformations_example.py
notebooks/: feature_engineering.ipynb  transformations.ipynb
src/plaid_ops/: __init__.py
src/plaid_ops/common/: __init__.py  visualization.py
src/plaid_ops/mesh/: feature_engineering.py  transformations.py
tests/: conftest.py  test_dummpy.py
tests/mesh/: test_feature_engineering.py  test_transformations.py
tests/visualization/: test_visualization.py
